# gotas-backend

./: Dockerfile  LICENSE  Readme.md  gotas-backend.cabal  lluvialarma-backend.cabal  stack.yaml  tresgotas-backend.cabal
app/: Main.hs
docker-build/: Dockerfile
src/: Cache.hs  ElTiempoEs.hs  Gps.hs  ImageUtils.hs  ImgLocation.hs  Lib.hs  Location.hs  Provider.hs
test/: Spec.hs
