name:                gotas-backend
version:             0.1.0.0
synopsis:            gotas backend
description:         Please see README.md
homepage:            https://bitbucket.org/codifilo/gotas-backend
license:             AllRightsReserved
license-file:        LICENSE
author:              Agustin Prats
maintainer:          aprats@gmail.com
copyright:           2016 Agustin Prats
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ImageUtils
                     , ElTiempoEs
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
                     , containers
  default-language:    Haskell2010

executable gotas
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gotas-backend
                     , JuicyPixels
  default-language:    Haskell2010

test-suite gotas-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                      , test-framework
                      , test-framework-hunit
                      , test-framework-quickcheck2
                      , HUnit
                      , QuickCheck
                      , gotas-backend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  ImgLocation: https://bitbucket.org/codifilo/gotas-backend
